force-app/main/default/objects/Rental__c/Rental__c.object-meta.xml
<CustomObject>
    <label>Rental</label>
    <nameField>
        <displayFormat>RENTAL-{00000000}</displayFormat>
        <label>Rental Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>