force-app/main/default/objects/Rental__c/fields/accountingDate__c.field-meta.xml
<CustomField>
    <fullName>accountingDate__c</fullName>
    <description>This date is where the transaction has been processed</description>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>