force-app/main/default/objects/Rental__c/fields/externalRentalNumber__c.field-meta.xml
<CustomField>
    <fullName>externalRentalNumber__c</fullName>
    <description>this reference is to the external booking provider</description>
    <label>External Rental Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>