force-app/main/default/objects/Rental__c/fields/flightNumber__c.field-meta.xml
<CustomField>
    <fullName>flightNumber__c</fullName>
    <description>This is if the customer has a flight number on the case. This is to deternime if we have alot of users there are arving by plane.</description>
    <label>Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>