force-app/main/default/objects/Rental__c/fields/handOverDate__c.field-meta.xml
<CustomField>
    <fullName>handOverDate__c</fullName>
    <label>Hand Over Date</label>
    <type>Date</type>
</CustomField>