force-app/main/default/objects/Rental__c/fields/handOverStation__c.field-meta.xml
<CustomField>
    <fullName>handOverStation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hand Over Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>