force-app/main/default/objects/Rental__c/fields/handOverTime__c.field-meta.xml
<CustomField>
    <fullName>handOverTime__c</fullName>
    <label>Hand Over Time</label>
    <type>Time</type>
</CustomField>