force-app/main/default/objects/Rental__c/fields/kindOfPayment__c.field-meta.xml
<CustomField>
    <fullName>kindOfPayment__c</fullName>
    <label>Kind of Payment</label>
    <length>2</length>
    <type>Text</type>
</CustomField>