force-app/main/default/objects/Rental__c/fields/lineValue__c.field-meta.xml
<CustomField>
    <fullName>lineValue__c</fullName>
    <description>This is the line value. To aggregate the total rental value you should do it on the Rental Agreement Id</description>
    <label>Line Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>