force-app/main/default/objects/Rental__c/fields/longTermRental__c.field-meta.xml
<CustomField>
    <fullName>longTermRental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is true, then it is a long term rental if it is unchecked then it is a short term rental</description>
    <label>Long Term Rental</label>
    <type>Checkbox</type>
</CustomField>