force-app/main/default/objects/Rental__c/fields/monthYear__c.field-meta.xml
<CustomField>
    <fullName>monthYear__c</fullName>
    <description>This field is showing the month and year for the rental</description>
    <label>Month Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>