force-app/main/default/objects/Rental__c/fields/priceDirection__c.field-meta.xml
<CustomField>
    <fullName>priceDirection__c</fullName>
    <description>This is to show if the customer is getting money or Sixt is getting money.</description>
    <label>Price Direction</label>
    <length>1</length>
    <type>Text</type>
</CustomField>