force-app/main/default/objects/Rental__c/fields/rentalAgreementID__c.field-meta.xml
<CustomField>
    <fullName>rentalAgreementID__c</fullName>
    <externalId>true</externalId>
    <label>Rental Agreement ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>