force-app/main/default/objects/Rental__c/fields/reservationId__c.field-meta.xml
<CustomField>
    <fullName>reservationId__c</fullName>
    <externalId>true</externalId>
    <label>Reservation Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>