force-app/main/default/objects/Rental__c/fields/returnDate__c.field-meta.xml
<CustomField>
    <fullName>returnDate__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>