force-app/main/default/objects/Rental__c/fields/returnStation__c.field-meta.xml
<CustomField>
    <fullName>returnStation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Return Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Rentals (Return Station)</relationshipLabel>
    <relationshipName>Rentals1</relationshipName>
    <type>Lookup</type>
</CustomField>