force-app/main/default/objects/Rental__c/fields/returnTime__c.field-meta.xml
<CustomField>
    <fullName>returnTime__c</fullName>
    <label>Return Time</label>
    <type>Time</type>
</CustomField>