force-app/main/default/objects/Rental__c/fields/secondDriver__c.field-meta.xml
<CustomField>
    <fullName>secondDriver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked this rental includes a second driver.</description>
    <label>Second Driver</label>
    <type>Checkbox</type>
</CustomField>