force-app/main/default/objects/Rental__c/fields/vehicleCobraId__c.field-meta.xml
<CustomField>
    <fullName>vehicleCobraId__c</fullName>
    <label>Vehicle Cobra Id</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>