force-app/main/default/objects/Rental__c/fields/vehicleGroup__c.field-meta.xml
<CustomField>
    <fullName>vehicleGroup__c</fullName>
    <label>Vehicle Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>